# pizza

./: .gitignore  Cargo.toml
bootloader/: Cargo.toml  pizza.boot  stage0.asm
bootloader/.cargo/: config.toml
bootloader/src/: asm_ffi.rs  compiler_builtins.rs  error.rs  main.rs  memory.rs  mmu.rs  pxe.rs
bootloader/src/pxe/: api.rs  preboot.rs  tftp.rs
bootloader/works_build/: pizza.boot  stage0.asm
cpu/src/: lib.rs  x86.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: compiler_builtins.rs  main.rs  mm.rs  tls.rs
mmu/: Cargo.toml
mmu/src/: lib.rs
ops/src/: lib.rs  range.rs
page_table/: Cargo.toml
page_table/src/: lib.rs
parse-pe/: Cargo.toml
parse-pe/src/: lib.rs  pe.rs  read.rs
parse-pe/src/pe/: coff.rs  opt.rs  sh.rs
parseme/: Cargo.toml
parseme/src/: lib.rs
pizza-build/: Cargo.toml  kernel_memory_28_09_2024.txt
pizza-build/src/: main.rs
rangeset/: Cargo.toml
rangeset/src/: lib.rs
read-me/: Cargo.toml
read-me/src/: lib.rs
serial/: Cargo.toml
serial/src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
sync/src/: lib.rs  lockcell.rs
