[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cpu = { path = "../cpu", version = "0.1.0"}
serial = { path = "../serial", version = "0.1.0"}
sync = { path = "../sync", version = "0.1.0"}
parse-pe = { path = "../parse-pe", version = "0.1.0" }
mmu = { path = "../page_table",package="page_table",  version = "0.1.0" }
#ops = { path = "../rangeset", package = "rangeset", version = "0.1.0"}
ops = { path = "../ops", version = "0.1.0" }

[profile.release]
opt-level = "z"
lto = "fat"
